Fixed some alignment in overview phone

--- a/src/app/webshop/shop/shop.component.scss
+++ b/src/app/webshop/shop/shop.component.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     padding: 20px;
+    flex: 1;
 
     .phone-list {
         display: flex;
@@ -38,6 +39,11 @@
                 margin-right: 20px;
                 max-width: 300px;
                 text-align: center;
+
+                .mat-card-image {
+                    max-height: 300px;
+                    width: auto;
+                }
 
                 .mat-chip-list {
                     margin-bottom: 10px;
